# Utils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  StringBench.cpp
scripts/: file_validator.py  project_config.py  project_utils.py  project_validator.py  setup_env.py  string_utils.py
scripts/git_hooks/: pre-commit
sources/: CMakeLists.txt  NotCopyableAndNotMoveable.h  UtilsAll.h
sources/Core/: AbstractIterators.h  All.h  Assert.h  CMakeLists.txt  CommonEnums.h  CommonInterfaces.h  Delegate.h  Enum.h  GlobalEnums.h  Math.h  Position.h  Rect.h  Singleton.h  Size.h  String.h  Utils.h
sources/Utils/: All.h  CMakeLists.txt  Concepts.h  CopyableAndMoveableBehaviour.h  Functions.cpp  Functions.h  NotCopyableButMoveable.h  Rect.h  Size.h  UtilsAll.h
tests/: CMakeLists.txt  DelegateTest.cpp  EnumTest.cpp  RectTest.cpp  SizeTest.cpp  StringTest.cpp  UtilsfunctionsTest.cpp
